--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Weather App</title>
+    <link href="/css/standard.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+
 </head>
-<body style="background-color: lightblue">
+<body style=" background-image: url(/image/WeatherImage.jpg)">
 
 <!-- This is our weather form -->
 <div class="col-md-6 offset-md-3">
