--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,19 +32,15 @@
 <!--This is our conditionally rendered weather data -->
 <div th:if="${data != null && data.name != 'error'}">
     <div class="container bg-light justify-content-center">
-        <div class="row" >
-            <div class="col col-md-6 offset-md-3">
+        <div class="row" style="background-color: grey;">
+            <div class="col col-md-12 offset-md-3">
                 <br/>
-                <style>
-body {
-  background-image: url("gradient_bg.png");
-}
-</style>
-                <h3 >Forecast for <span th:text="${data.name}"></span></h3>
-                <p><b>Temperature:</b> <span th:text="${data.main.get('temp')}"></span> °F</p>
-                <p><b>Cloud Cover:</b> <span th:text="${data.clouds.get('all')}"></span> %</p>
-                <p><b>Wind:</b> <span th:text="${data.wind.get('speed')}"></span> mph</p>
-                <p><b>Conditions:</b> <span th:text="${data.weather[0].get('description')}"></span>
+
+                <h3 style="color: white" >Forecast for <span th:text="${data.name}"></span></h3>
+                <p style="color: white"><b>Temperature:</b> <span th:text="${data.main.get('temp')}"></span> °F</p>
+                <p style="color: white"><b>Cloud Cover:</b> <span th:text="${data.clouds.get('all')}"></span> %</p>
+                <p style="color: white"><b>Wind:</b> <span th:text="${data.wind.get('speed')}"></span> mph</p>
+                <p style="color: white"><b>Conditions:</b> <span th:text="${data.weather[0].get('description')}"></span>
 
                     <img th:src="@{${'http://openweathermap.org/img/w/'
                 + data.weather[0].get('icon') + '.png'}}"></p>
